--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "@google/genai": "^1.41.0",
-    "lucide-react": "^0.563.0"
+    "lucide-react": "^0.460.0",
+    "@vitejs/plugin-react": "^4.3.4"
   },
   "devDependencies": {
-    "vite": "^6.0.0",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "typescript": "^5.0.0"
+    "vite": "^5.4.11",
+    "typescript": "^5.6.3"
   }
 }
